# kmymoney-transactionattach

./: CMakeLists.txt
debian/: changelog  control
po/: .CMakeLists.txt.swp  CMakeLists.txt  extract-messages.sh  kmm_transactionattach.pot  kmm_transactionattach_ru.po  kmm_transactionattach_ru.pot
src/: CMakeLists.txt  abstractattachmentstorage.cpp  abstractattachmentstorage.h  aspectratiopixmaplabel.cpp  aspectratiopixmaplabel.h  attachdelegate.cpp  attachdelegate.h  attachmentmodel.cpp  attachmentmodel.h  attachmentstorage.cpp  attachmentstorage.h  attachmentstoragefactory.cpp  attachmentstoragefactory.h  attachmentstoragefilesystem.cpp  attachmentstoragefilesystem.h  attachmentstoragesqlite.cpp  attachmentstoragesqlite.h  kcm_kmm_transactionattach.desktop  kcm_transactionattach.cpp  kcm_transactionattach.h  kmm_transactionattach.desktop  kmm_transactionattach.rc  listviewattachment.cpp  listviewattachment.h  pluginsettings.kcfg  transactionattach.cpp  transactionattach.h  transactionattach_export.h  transactionattachview.cpp  transactionattachview.h
src/forms/: CMakeLists.txt  attachmentdialog.cpp  attachmentdialog.h  attachmentdialog.ui  filesystemstoragesettings.cpp  filesystemstoragesettings.h  filesystemstoragesettings.ui  pluginsettingsdecl.ui  pluginsettingswidget.cpp  pluginsettingswidget.h  sqlitestoragesettings.cpp  sqlitestoragesettings.h  sqlitestoragesettings.ui
tests/: CMakeLists.txt  storage_tester.cpp
